Commit from TeleportHQ

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>
-      Lucretzia's Tookit for the Nroken Hearted NFTs - Elrond Network
+      Lucretzia's Tookit for the Broken Hearted NFTs - Elrond Network
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
