--- a/public/index.html
+++ b/public/index.html
@@ -27,25 +27,25 @@
         <!-- Social Cards -->
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ElrondNetwork" />
-    <meta name="twitter:creator" content="@ElrondNetwork" />
-    <meta name="twitter:title" content="Elrond dApp Template" />
+    <meta name="twitter:site" content="@_Lucretzia" />
+    <meta name="twitter:creator" content="@_Lucretzia" />
+    <meta name="twitter:title" content="Lucretzia's Toolkit For The Broken Hearted" />
     <meta
       name="twitter:description"
-      content="A basic implementation of @elrondnetwork/dapp providing the basics for Elrond authentication and TX signing."
+      content="The official store page for Lucretzia's Toolkit For The Broken Hearted NFTs"
     />
-    <meta name="twitter:image" content="https://dapp-template.elrond.com/social.png" />
+    <!-- <meta name="twitter:image" content="https://dapp-template.elrond.com/social.png" /> -->
 
     <!-- Other Cards -->
-    <meta property="og:url" content="https://dapp-template.elrond.com" />
-    <meta property="og:title" content="Elrond dApp Template" />
+    <meta property="og:url" content="https://minty.lucretzia.com" />
+    <meta property="og:title" content="Lucretzia's Toolkit For The Broken Hearted" />
     <meta
       property="og:description"
-      content="A basic implementation of @elrondnetwork/dapp providing the basics for Elrond authentication and TX signing."
+      content="The official store page for Lucretzia's Toolkit For The Broken Hearted NFTs"
     />
-    <meta property="og:image" content="https://dapp-template.elrond.com/social.png" />
+    <!-- <meta property="og:image" content="https://dapp-template.elrond.com/social.png" /> -->
 
-    <title>Elrond dApp Template</title>
+    <title>Lucretzia's Toolkit For The Broken Hearted</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
